--- a/src/main/webapp/bomenStyle.css
+++ b/src/main/webapp/bomenStyle.css
@@ -98,11 +98,30 @@ form ul{
     border-style: solid;
     margin-bottom: 10px;
 }
+table{
+    margin-top: 5%;
+    margin-left: 10%;
+    border: double 5px #307227;
+    border-radius: 20px;
+    padding: 1%;
+    table-layout: auto;
+    width: 80%;
+}
+table th{
+    text-decoration: underline;
+}
+table tr{
+    text-align: center;
+    padding: 1%;
+}
 @media (max-width: 1100px){
     main ul{
         flex-direction: column;
     }
     nav ul{
         flex-direction: column;
+    }
+    table{
+        width: 100%;
     }
 }
